<resources>
    <string name="app_name">Academia</string>
    <string name="title">Avengers:\nEnd Game</string>
    <string name="tags">Action, Adventure, Fantasy</string>
    <string name="review">125 Reviews</string>
    <string name="storyline">Storyline</string>
    <string name="storyline_text">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="_13">13+</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="back">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_list">Movies list</string>
    <string name="avengers_end_game">Avengers: End Game</string>
    <string name="_137_min">137 min</string>
    <string name="_125_reviews">125 Reviews</string>
    <string name="action_adventure_drama">Action, Adventure, Drama</string>


    <string name="minutes">%d min</string>
    <string name="reviews">%d reviews</string>
</resources>