<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="@dimen/normal_50"
    android:layout_marginTop="@dimen/normal_50"
    android:layout_marginEnd="@dimen/normal_50"
    android:layout_marginBottom="@dimen/normal_50"
    app:cardCornerRadius="@dimen/normal_50"
    app:contentPadding="@dimen/min_width"
    app:strokeColor="@color/stroke_color"
    app:strokeWidth="@dimen/min_width">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <ImageView
            android:id="@+id/iv_movies_list_poster"
            android:layout_width="0dp"
            android:layout_height="248dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/avengers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_movies_list_title" />

        <ImageView
            android:id="@+id/iv_movies_list_mask"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_poster"
            app:layout_constraintEnd_toEndOf="@id/iv_movies_list_poster"
            app:layout_constraintStart_toStartOf="@id/iv_movies_list_poster"
            app:layout_constraintTop_toTopOf="@id/iv_movies_list_poster"
            app:layout_constraintBottom_toBottomOf="@id/iv_movies_list_poster" />

        <TextView
            android:id="@+id/tv_movies_list_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/normal_50"
            android:layout_marginTop="@dimen/normal_50"
            android:fontFamily="sans-serif-black"
            android:lineSpacingExtra="@dimen/spacing_normal_150"
            android:text="@string/avengers_end_game"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_normal_125"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_movies_list_poster" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_50"
            android:layout_marginBottom="@dimen/normal_50"
            android:fontFamily="sans-serif-black"
            android:lineSpacingExtra="@dimen/spacing_normal_100"
            android:text="@string/_137_min"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/text_size_normal_66"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_movies_list_title" />

        <ru.mikov.academia.custom.RatingBarSvg
            android:id="@+id/rating_movies_list"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/normal_35"
            android:layout_marginBottom="@dimen/margin_10"
            android:numStars="5"
            android:progressBackgroundTint="@color/grey"
            android:progressDrawable="@drawable/ratingbar_svg_selector"
            android:progressTint="@color/pink"
            android:rating="4"
            android:secondaryProgressTint="@color/grey"
            app:drawableHeight="8dp"
            app:drawableWidth="8dp"
            app:layout_constraintBottom_toBottomOf="@id/iv_movies_list_poster"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_35"
            android:fontFamily="sans-serif-black"
            android:lineSpacingExtra="@dimen/spacing_normal_100"
            android:text="@string/_125_reviews"
            android:textAllCaps="true"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/text_size_normal_66"
            app:layout_constraintBottom_toBottomOf="@id/rating_movies_list"
            app:layout_constraintStart_toEndOf="@+id/rating_movies_list"
            app:layout_constraintTop_toTopOf="@id/rating_movies_list" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/normal_35"
            android:layout_marginBottom="4dp"
            android:fontFamily="sans-serif-light"
            android:lineSpacingExtra="@dimen/spacing_normal_150"
            android:text="@string/tags"
            android:textColor="@color/pink"
            android:textSize="@dimen/text_size_normal_66"
            app:layout_constraintBottom_toTopOf="@id/rating_movies_list"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_age_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_35"
            android:layout_marginTop="@dimen/normal_50"
            android:background="@drawable/bg"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/spacing_normal_50"
            android:text="@string/_13"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal_100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginTop="@dimen/normal_50" />

        <ImageView
            android:id="@+id/iv_like"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_13"
            android:layout_marginEnd="@dimen/normal_35"
            android:src="@drawable/ic_like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>